# mine-dot-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
src/minedotc/: CMakeLists.txt  map.h  mine.h
src/minedotc_testcli/: CMakeLists.txt  main.cpp
src/minedotcpp/: CMakeLists.txt  global_wrappers.cpp  global_wrappers.h  map.cpp  mine.h  mine_api.h
src/minedotcpp/benchmarking/: benchmark_density_group.h  benchmark_entry.h  benchmarker.cpp  benchmarker.h
src/minedotcpp/common/: cell.cpp  cell.h  cell_param.h  common_functions.h  common_macros.h  map.cpp  map.h  map_base.h  neighbour_cache_entry.h  point.h
src/minedotcpp/debug/: debugging.h  trace_gate.h
src/minedotcpp/game/: game_cell.h  game_engine.cpp  game_engine.h  game_map.cpp  game_map.h  game_map_generator.cpp  game_map_generator.h  game_result.h
src/minedotcpp/mapio/: text_map_parser.cpp  text_map_parser.h  text_map_visualizer.cpp  text_map_visualizer.h
src/minedotcpp/solvers/: border.h  combination.h  matrix_reduction_parameters.h  partial_border_data.h  solver.cpp  solver.h  solver_map.cpp  solver_map.h  solver_result.h  solver_settings.h  solver_verdict.h  zobrist.h
src/minedotcpp/solvers/services/: solver_service_base.cpp  solver_service_base.h  solver_service_gaussian.cpp  solver_service_gaussian.h  solver_service_guessing.cpp  solver_service_guessing.h  solver_service_separation.cpp  solver_service_separation.h  solver_service_separation_combination_finding.cpp  solver_service_separation_combination_finding.h  solver_service_separation_mine_counts.cpp  solver_service_separation_mine_counts.h  solver_service_trivial.cpp  solver_service_trivial.h
src/minedotcpp/solvers/services/gaussian/: solver_service_gaussian.cpp  solver_service_gaussian.h
src/minedotcpp/solvers/services/guessing/: solver_service_guessing.cpp  solver_service_guessing.h
src/minedotcpp/solvers/services/separation/: find_combinations.cl  solver_service_separation.cpp  solver_service_separation.h  solver_service_separation_combination_finding.cpp  solver_service_separation_combination_finding.h  solver_service_separation_mine_counts.cpp  solver_service_separation_mine_counts.h
src/minedotcpp/solvers/services/trivial/: solver_service_trivial.h
src/minedotcpp/sparsehash/: dense_hash_map  dense_hash_set
src/minedotcpp/sparsehash/internal/: densehashtable.h
src/minedotcpp_testcli/: CMakeLists.txt  main.cpp
src/minedotcpp_umsi/: CMakeLists.txt  UMSI.md  main.cpp
